--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0">
   <meta name="author" content="Кристина Картяева">
   <title>Путешествия по России</title>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./vendor/fonts/fonts.css">
-  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="body">
-  <div class="wrapper">
+  
     <div class="page">
       <header class="section header">
         <img class="header__logo" src="images/header-logo.svg" alt="Россия" />
         <div class="header__lang-links">
-          <a class="header__lang-link" href="#">Ru</a>
+          <a class="header__lang-link header__lang-link_current" href="#">Ru</a>
           <a class="header__lang-link" href="#">En</a>
         </div>
       </header>
@@ -194,7 +191,7 @@
         </nav>
         <p class="footer__copyright">&copy; 2022. Картяева Кристина</p>
       </footer>
-    </div>
+
   </div>
 </body>
 
