--- a/index.html
+++ b/index.html
@@ -10,69 +10,66 @@
 </head>
 
 <body class="body">
-  
-    <div class="page">
-      <header class="section header">
-        <img class="header__logo" src="images/header-logo.svg" alt="Россия" />
-        <div class="header__lang-links">
-          <a class="header__lang-link header__lang-link_current" href="#">Ru</a>
-          <a class="header__lang-link" href="#">En</a>
-        </div>
-      </header>
 
-      <main>
+  <div class="page">
+    <header class="section header">
+      <img class="header__logo" src="images/header-logo.svg" alt="Россия" />
+      <div class="header__lang-links">
+        <a class="header__lang-link header__lang-link_current" href="#">Ru</a>
+        <a class="header__lang-link" href="#">En</a>
+      </div>
+    </header>
 
-        <section class="section lead">
-          <h1 class="section__title lead__title">Путешеcтвия по&nbsp;России</h1>
-          <p class="section__subtitle lead__subtitle">Настоящая страна не в выпусках новостей, а здесь</p>
-          <img class="lead__image" src="images/lead-polka.jpg" alt="Нижняя полка">
-          <p class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</p>
-        </section>
+    <main class="content">
 
-        <section class="section intro">
-          <div class="intro__wrapper">
-            <h2 class="section__title intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
-            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-              провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-              вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
-              эти
-              красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
-              Башмакова
-              —
-              смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
-              километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
-            </p>
-            <ul class="intro__catalog">
-              <li class="intro__catalog-item">Часовых поясов <span class="intro__number">11</span></li>
-              <li class="intro__catalog-item">Объектов природного наследия ЮНЕСКО <span class="intro__number">12</span>
-              </li>
-              <li class="intro__catalog-item">Объектов культурного наследия ЮНЕСКО <span class="intro__number">16</span>
-              </li>
-              <li class="intro__catalog-item">Природных заповедников <span class="intro__number">105</span></li>
-              <li class="intro__catalog-item">Аэропортов <span class="intro__number">241</span></li>
-            </ul>
-          </div>
-        </section>
+      <section class="section lead">
+        <h1 class="section__title lead__title">Путешеcтвия по&nbsp;России</h1>
+        <p class="section__subtitle lead__subtitle">Настоящая страна не в выпусках новостей, а здесь</p>
+        <figure class="lead__picture">
+        <img class="lead__image" src="images/lead-polka.jpg" alt="Нижняя полка">
+        <figcaption class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</figcaption>
+      </figure>
+      </section>
 
-        <section class="section photo-grid">
-          <ul class="photo-grid__catalog">
-            <li><img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Вид из окна поезда"> </li>
-            <li><img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Горы"></li>
-            <li><img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Туман"></li>
-            <li><img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="Сочи"></li>
-            <li><img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="Машина на льду"></li>
-            <li><img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="Байкал"></li>
-            <li><img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="Эльбрус"></li>
-            <li><img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="Станислав Кондратьев"></li>
-            <li><img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="Камчатка"></li>
-            <li><img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2"></li>
-            <li><img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Байкал-2"></li>
-            <li><img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Ергаки"></li>
+      <section class="section intro">
+          <h2 class="section__title intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
+          <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+            провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+            вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
+            эти
+            красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+            Башмакова
+            —
+            смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
+            километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+          </p>
+          <ul class="intro__catalog">
+            <li><span class="intro__span">Часовых поясов</span> 11</li>
+            <li><span class="intro__span">Объектов природного наследия ЮНЕСКО</span> 12</li>
+            <li><span class="intro__span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+            <li><span class="intro__span">Природных заповедников</span> 105</li>
+            <li><span class="intro__span">Аэропортов</span> 241</li>
           </ul>
-        </section>
+      </section>
 
-        <section class="section places">
-          <div class="place">
+      <section class="section photo-grid">
+          <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Вид из окна поезда"> 
+          <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Горы">
+          <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Туман">
+          <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="Сочи">
+          <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="Машина на льду">
+          <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="Байкал">
+          <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="Эльбрус">
+          <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="Станислав Кондратьев">
+          <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
+          <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2">
+          <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Байкал-2">
+          <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Ергаки">
+      </section>
+
+      <section class="section places">
+        <ul class="places__catalog">
+          <li class="place">
             <h2 class="section__title place__title">Куршская коса</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
@@ -90,8 +87,8 @@
                 природы
                 и запах стального, прохладного моря.</p>
             </div>
-          </div>
-          <div class="place">
+          </li>
+          <li class="place">
             <h2 class="section__title place__title">Кольский</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
@@ -112,8 +109,8 @@
                 накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
                 в Мурманск.</p>
             </div>
-          </div>
-          <div class="place">
+          </li>
+          <li class="place">
             <h2 class="section__title place__title">Алтай</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
@@ -132,8 +129,8 @@
                 всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на
                 равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
             </div>
-          </div>
-          <div class="place">
+          </li>
+          <li class="place">
             <h3 class="section__title place__title">Зимний Байкал</h3>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
@@ -150,8 +147,8 @@
                 фестивале
                 «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
             </div>
-          </div>
-          <div class="place">
+          </li>
+          <li class="place">
             <h2 class="section__title place__title">Карелия</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
@@ -166,31 +163,32 @@
                 В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                 в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
-          </div>
-        </section>
+          </li>
+        </ul>
+      </section>
 
-        <section class="section cover">
-          <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-            <h2 class="section__title cover__title">До Байкала «на&nbsp;собаках»</h2>
-            <p class="section__subtitle cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до
-              Байкала на
-              электричках.</p>
-          </a>
-        </section>
-      </main>
+      <section class="section cover">
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+          <h2 class="section__title cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <p class="section__subtitle cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до
+            Байкала на
+            электричках.</p>
+        </a>
+      </section>
+    </main>
 
-      <footer class="section footer">
-        <nav>
-          <ul class="footer__links">
-            <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-            <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-            <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-            <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-            <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
-          </ul>
-        </nav>
-        <p class="footer__copyright">&copy; 2022. Картяева Кристина</p>
-      </footer>
+    <footer class="section footer">
+      <nav>
+        <ul class="footer__links">
+          <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+          <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+          <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+          <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+          <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+        </ul>
+      </nav>
+      <p class="footer__copyright">&copy; 2022. Кристина</p>
+    </footer>
 
   </div>
 </body>
