--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
 <body class="body">
 
   <div class="page">
-    <header class="section header">
+    <header class="header">
       <img class="header__logo" src="images/header-logo.svg" alt="Россия" />
-      <div class="header__lang-links">
-        <a class="header__lang-link header__lang-link_current" href="#">Ru</a>
-        <a class="header__lang-link" href="#">En</a>
-      </div>
+      <ul class="header__lang-links">
+        <li><a class="header__lang-link header__lang-link_current" href="#">Ru</a></li>
+        <li><a class="header__lang-link" href="#">En</a></li>
+      </ul>
     </header>
 
     <main class="content">
 
-      <section class="section lead">
-        <h1 class="section__title lead__title">Путешеcтвия по&nbsp;России</h1>
-        <p class="section__subtitle lead__subtitle">Настоящая страна не в выпусках новостей, а здесь</p>
+      <section class="lead">
+        <h1 class="lead__title">Путешеcтвия по&nbsp;России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь</p>
         <figure class="lead__picture">
         <img class="lead__image" src="images/lead-polka.jpg" alt="Нижняя полка">
         <figcaption class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</figcaption>
       </figure>
       </section>
 
-      <section class="section intro">
-          <h2 class="section__title intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
+      <section class="intro">
+          <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
           <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
             провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
             вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
@@ -52,7 +52,7 @@
           </ul>
       </section>
 
-      <section class="section photo-grid">
+      <section class="photo-grid">
           <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Вид из окна поезда"> 
           <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Горы">
           <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Туман">
@@ -67,10 +67,10 @@
           <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Ергаки">
       </section>
 
-      <section class="section places">
+      <section class="places">
         <ul class="places__catalog">
           <li class="place">
-            <h2 class="section__title place__title">Куршская коса</h2>
+            <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="park-kosa.ru">park-kosa.ru</a>
@@ -89,7 +89,7 @@
             </div>
           </li>
           <li class="place">
-            <h2 class="section__title place__title">Кольский</h2>
+            <h2 class="place__title">Кольский</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
@@ -111,7 +111,7 @@
             </div>
           </li>
           <li class="place">
-            <h2 class="section__title place__title">Алтай</h2>
+            <h2 class="place__title">Алтай</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"><abbr
@@ -131,7 +131,7 @@
             </div>
           </li>
           <li class="place">
-            <h3 class="section__title place__title">Зимний Байкал</h3>
+            <h3 class="place__title">Зимний Байкал</h3>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
@@ -149,7 +149,7 @@
             </div>
           </li>
           <li class="place">
-            <h2 class="section__title place__title">Карелия</h2>
+            <h2 class="place__title">Карелия</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru</a>
@@ -167,25 +167,25 @@
         </ul>
       </section>
 
-      <section class="section cover">
+      <section class="cover">
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          <h2 class="section__title cover__title">До Байкала «на&nbsp;собаках»</h2>
-          <p class="section__subtitle cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до
             Байкала на
             электричках.</p>
         </a>
       </section>
     </main>
 
-    <footer class="section footer">
-      <nav>
-        <ul class="footer__links">
-          <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-          <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-          <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-          <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-          <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
-        </ul>
+    <footer class="footer">
+      
+        <nav class="footer__links">
+          <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+          <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+          <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+          <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+          <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+        
       </nav>
       <p class="footer__copyright">&copy; 2022. Кристина</p>
     </footer>
