--- a/index.html
+++ b/index.html
@@ -23,48 +23,48 @@
     <main class="content">
 
       <section class="lead">
-        <h1 class="lead__title">Путешеcтвия по&nbsp;России</h1>
+        <h1 class="lead__title">Путешеcтвия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь</p>
         <figure class="lead__picture">
-        <img class="lead__image" src="images/lead-polka.jpg" alt="Нижняя полка">
-        <figcaption class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</figcaption>
-      </figure>
+          <img class="lead__image" src="images/lead-polka.jpg" alt="Нижняя полка">
+          <figcaption class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</figcaption>
+        </figure>
       </section>
 
       <section class="intro">
-          <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
-          <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-            провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-            вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
-            эти
-            красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
-            Башмакова
-            —
-            смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
-            километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
-          </p>
-          <ul class="intro__catalog">
-            <li><span class="intro__span">Часовых поясов</span> 11</li>
-            <li><span class="intro__span">Объектов природного наследия ЮНЕСКО</span> 12</li>
-            <li><span class="intro__span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-            <li><span class="intro__span">Природных заповедников</span> 105</li>
-            <li><span class="intro__span">Аэропортов</span> 241</li>
-          </ul>
+        <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+          провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+          вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
+          эти
+          красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+          Башмакова
+          —
+          смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
+          километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+        </p>
+        <ul class="intro__catalog">
+          <li><span class="intro__span">Часовых поясов</span> 11</li>
+          <li><span class="intro__span">Объектов природного наследия ЮНЕСКО</span> 12</li>
+          <li><span class="intro__span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+          <li><span class="intro__span">Природных заповедников</span> 105</li>
+          <li><span class="intro__span">Аэропортов</span> 241</li>
+        </ul>
       </section>
 
       <section class="photo-grid">
-          <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Вид из окна поезда"> 
-          <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Горы">
-          <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Туман">
-          <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="Сочи">
-          <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="Машина на льду">
-          <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="Байкал">
-          <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="Эльбрус">
-          <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="Станислав Кондратьев">
-          <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
-          <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2">
-          <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Байкал-2">
-          <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Ергаки">
+        <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Вид из окна поезда">
+        <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Горы">
+        <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Туман">
+        <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="Сочи">
+        <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="Машина на льду">
+        <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="Байкал">
+        <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="Эльбрус">
+        <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="Станислав Кондратьев">
+        <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
+        <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2">
+        <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Байкал-2">
+        <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Ергаки">
       </section>
 
       <section class="places">
@@ -178,14 +178,14 @@
     </main>
 
     <footer class="footer">
-      
-        <nav class="footer__links">
-          <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-          <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-          <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-          <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-          <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-        
+
+      <nav class="footer__links">
+        <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+        <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+        <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+        <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+        <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+
       </nav>
       <p class="footer__copyright">&copy; 2022. Кристина</p>
     </footer>
